<resources>
    <string name="app_name">calender</string>
    <string name="day0">Sun</string>
    <string name="day1">Mon</string>
    <string name="day2">Tue</string>
    <string name="day3">Wed</string>
    <string name="day4">Thu</string>
    <string name="day5">Fri</string>
    <string name="day6">Sat</string>
    <string name="dialog_fire_mis">Dialog?</string>
    <string name="fire">fire</string>
    <string name="cancel">cancel</string>
</resources>
