<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/previous"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_left"
                 />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dip"
            android:textColor="#000000"
            android:textSize="22dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>

    </RelativeLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textAlignment="center"
                android:text="@string/day0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAlignment="center"
                android:text="@string/day1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAlignment="center"
                android:text="@string/day2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textAlignment="center"
                android:text="@string/day3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_column="4"
                android:text="@string/day4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_column="5"
                android:text="@string/day5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_column="6"
                android:text="@string/day6" />
        </TableRow>
    </TableLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="380dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth"
         />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listAgenda"
        android:background="@color/colorPrimaryDark"/>



</LinearLayout>

